--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <title>My First Bitstarter</title>
     <link type="text/css" rel="stylesheet"
-        href="https://d396quzsza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
+        href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
     <style type="text/css">
       body {
         padding-top: 20px;
-        padding-top: 40px;
+        padding-bottom: 40px;
       }
       .container {
         width: 960px;
@@ -82,6 +82,11 @@
           Marketing Section 1
         </div>
       </div>
+      <div class="row section2">
+        <div class="spanm12">
+          Marketing Section 2
+        </div>
+      </div>
       <div class="row faq">
         <div class="span12">
           FAQ
@@ -95,5 +100,3 @@
     </div>
   </body>
 </html>
-
-    
